<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.github.hazendaz</groupId>
        <artifactId>base-parent</artifactId>
        <version>55</version>
        <relativePath />
    </parent>

    <groupId>com.github.hazendaz.jmockit</groupId>
    <artifactId>jmockit-parent</artifactId>
    <version>1.56.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>jmockit-parent</name>
    <description>Parent POM for JMOCKIT</description>

    <licenses>
        <license>
            <name>The MIT License</name>
            <url>http://www.opensource.org/licenses/mit-license.php</url>
        </license>
    </licenses>

    <modules>
        <module>coverageTests</module>
        <module>main</module>
        <module>samples</module>
    </modules>

    <scm>
        <connection>scm:git:https://github.com/hazendaz/jmockit1</connection>
        <developerConnection>scm:git:ssh://git@github.com/hazendaz/jmockit1.git</developerConnection>
        <tag>HEAD</tag>
        <url>https://github.com/hazendaz/jmockit1</url>
    </scm>

    <distributionManagement>
        <site>
            <id>gh-pages-scm</id>
            <name>gh-pages-scm</name>
            <url>scm:git:ssh://git@github.com/hazendaz/jmockit1.git</url>
        </site>
    </distributionManagement>

    <properties>
        <!-- Maven compiler options -->
        <java.version>11</java.version>
        <java.release.version>11</java.release.version>
        <javadoc.java.release.version>11</javadoc.java.release.version>

        <!-- Reproducible Builds -->
        <project.build.outputTimestamp>1745704603</project.build.outputTimestamp>

        <!-- Automatic Module Name -->
        <module.name>com.github.hazendaz.jmockit.parent</module.name>

        <!-- Surefire Argline -->
        <argLine>-javaagent:${settings.localRepository}/com/github/hazendaz/jmockit/jmockit/1.56.0/jmockit-1.56.0.jar --add-opens java.base/java.lang=ALL-UNNAMED</argLine>

        <!-- Disable topSiteURL -->
        <topSiteURL />
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.checkerframework</groupId>
            <artifactId>checker-qual</artifactId>
            <version>3.51.1</version>
        </dependency>
        <dependency>
            <groupId>com.github.spotbugs</groupId>
            <artifactId>spotbugs-annotations</artifactId>
            <version>4.9.6</version>
            <exclusions>
                <exclusion>
                    <groupId>com.google.code.findbugs</groupId>
                    <artifactId>jsr305</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
    </dependencies>

</project>
